syntax = "proto3";

package tari.dht.common;

message IdentitySignature {
  uint32 version = 1;
  bytes signature = 2;
  bytes public_nonce = 3;
  // The EPOCH timestamp used in the identity signature challenge
  int64 updated_at = 4;
}
